# Hackton

./: .gitignore  README.md  cognee-iter-log.md  mprocs.yaml  reset-demo.sh  seed.sh
backend/: .env.example  README.md  main.py  pyproject.toml
backend/agent/: __init__.py  database.py  db.py  harness.py  models.py  quiz_workflow.py  scheduler.py
backend/app/: __init__.py  api_auth.py  auth.py  chat_models.py  chat_service.py  cognee_service.py  config.py  connection_manager.py  demo_time.py  event_discovery.py  llm_context.py  routes_auth.py  routes_chat.py  routes_cognee.py  routes_demo.py  routes_events.py  routes_ws.py  scraper.py  types.py
backend/docs/: Notification.md
backend/quiz/: generator.py
backend/scripts/: live_smoke.py  seed.py  seed_demo_sql.py
backend/seed/diary/: 2026-04-08-mon.md  2026-04-09-tue.md  2026-04-10-wed.md  2026-04-11-thu.md  2026-04-12-fri.md  2026-04-14-sun.md
backend/seed/materials/: ml-l3-transformers.md  ml-l4-backprop.md  study-skills.md
backend/tests/: conftest.py  test_agent.py  test_chat_routes.py  test_cognee_service.py  test_routes.py  test_routes_demo.py  test_seed.py  test_types.py  test_ws_routes.py
data/diary/: 2025-09-22-mon.md  2025-09-23-tue.md  2025-09-25-thu.md  2025-09-27-sat.md  2025-09-29-mon.md  2025-10-01-wed.md  2025-10-03-fri.md  2025-10-06-mon.md  (+25 more)
frontend/: index.html  vite.config.ts
frontend-demo/: index.html  package-lock.json  package.json  vite.config.ts
notes/: Odin.md  brainstorm.md  cognee-dossier.md  cognee.md  concept.md  reply-challenge.md  spec-cognee.md  spec-deltas.md
(+7 files in other folders)
