[project]
name = "backend"
version = "0.1.0"
description = "Study Diary backend — cognee memory layer + agent orchestration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "cognee==1.0.0",
    "pydantic-settings>=2.0",
    "litellm>=1.50",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
include = ["app/**/*.py", "scripts/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long — enforce via formatter instead
    "B008",   # function call in default arg — FastAPI depends/Path use this pattern
    "SIM117", # nested with statements — sometimes clearer unnested
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["SIM117"]
